@@ -1,3 +1,13 @@
+2002-08-28  Keith Seitz  <keiths@redhat.com>
+
+	* thread.c (do_captured_thread_select): Add context-changed
+	notification.
+	* infrun.c (handle_inferior_event): Remove context-changed
+	notification. The stop result already has this information.
+
+	* thread.c (do_captured_list_thread_ids): Use ui_out_list_begin/end
+	instead of ui_out_tuple_begin/end.
+
 2002-08-22  Keith Seitz  <keiths@redhat.com>
 
 	* breakpoint.c (internal_breakpoint_number): Revert 2002-06-18 change.
